# Pricing-app

./: .gitignore  .~lock.2025 Price worksheet - Mark.xlsx#  2025 Price worksheet - Mark.xlsx  build.sh  build_files.sh  db.sqlite3  db_dump.json  import_products.py  manage.py  pyproject.toml  reimport.py  requirements.txt  settings.py  vercel.json  vercel_app.py
.agents/workflows/: audit.md  implement.md  plan.md  specify.md  tasks.md
core/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_product_effective_date_importfile.py  0003_masterproduct_product_master.py  0004_masterproduct_packaging.py  0005_quotation.py  0006_notification.py  0006_pricing.py  0007_pricing_packaging.py  0008_merge_0006_notification_0007_pricing_packaging.py  0009_lead.py  0010_masterproduct_liters_per_case_and_more.py  0011_alter_masterproduct_approval_and_more.py  0012_alter_masterproduct_code_alter_product_sku.py  0013_alter_masterproduct_code_alter_product_sku.py  0014_lead_product_lead_quantity_lead_won_at.py
media/exports/: pricing-export.xlsx  pricing-export_ARCLvmA.xlsx  pricing-export_bien4M2.xlsx  pricing-export_tqQkZvs.xlsx  (+1 more)
memory/: constitution.md  project-context.md
pricing_app/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  crm_analytics.html  crm_dashboard.html  dashboard.html  history.html  import_form.html  import_preview.html  invite_people.html  pricing.html  product_form.html  products.html  proforma_invoice_document.html  quotation_document.html  sales_dashboard.html
(+25 files in other folders)
