[project]
name = "pricing-app"
version = "1.0.0"
description = "Django Pricing App"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "whitenoise>=6.6.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = false